ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scale-to-zero
  namespace: demo
spec:
  routes:
    - match: Host(`scale.docker.localhost`)
      kind: Rule
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
---
